# SubHound

./: .gitignore  README.md  ROADMAP.md  pyproject.toml  requirements.txt
docs/: PIPELINE.md
src/subhound/: __main__.py  logging_setup.py  scheduling.py
src/subhound/config/: portable.py  secrets.py  settings.py  store.py
src/subhound/core/: extract.py  hashing.py  identify.py  scan.py  subtitle_convert.py  subtitle_lang.py  sync.py  tools.py
src/subhound/pipeline/: lock.py  orchestrator.py  quota.py  results.py
src/subhound/providers/: _util.py  base.py  gestdown.py  milahu.py  opensubtitles_com.py  podnapisi.py  registry.py  subsource.py  tvsubtitles.py  yify.py
src/subhound/tui/: app.py  app.tcss
src/subracer/: __main__.py  logging_setup.py  scheduling.py
src/subracer/config/: portable.py  secrets.py  settings.py  store.py
src/subracer/core/: extract.py  hashing.py  identify.py  scan.py  subtitle_convert.py  subtitle_lang.py  sync.py  tools.py
src/subracer/osdb/: builder.py  index.py  local_osdb.py  mirror.py  torrent_client.py
src/subracer/pipeline/: lock.py  orchestrator.py  quota.py  results.py
src/subracer/providers/: _util.py  base.py  gestdown.py  milahu.py  opensubtitles_com.py  podnapisi.py  registry.py  subsource.py  tvsubtitles.py  yify.py
src/subracer/tui/: app.py
tests/: conftest.py  eval_identify.py  test_cli.py  test_extract.py  test_identify.py  test_identify_report.py  test_lock.py  test_milahu.py  test_mirror.py  test_orchestrator.py  test_osdb.py  test_portable.py  test_providers.py  test_providers_phase2.py  test_providers_phase2b.py  test_quota.py  test_results.py  test_scheduling.py  test_subtitle_convert.py  test_sync.py  test_tui.py
tests/data/portable_media_test_set/: README.md  SHA256SUMS.txt  directory_tree.txt  manifest.csv  manifest.json
tests/data/portable_media_test_set/edge_cases/partial/: Oppenheimer.2023.2160p.mkv.!qB
tests/reports/: identify_report.html  identify_report.xlsx
(+379 files in other folders)
